--- a/css/style.css
+++ b/css/style.css
@@ -381,3 +381,14 @@ footer .menu-item{
         transform: scale(1) rotate(-360deg);
     }
 }
+
+.banner-tick samp{
+    font-size: 5em;
+    font-weight: 700;
+    color:#D4C17F;
+}
+
+.header-subtitle{
+    font-family: 'Raleway', sans-serif;
+    font-size: 30px;
+}
