--- a/css/style.css
+++ b/css/style.css
@@ -386,9 +386,14 @@ footer .menu-item{
     font-size: 5em;
     font-weight: 700;
     color:#D4C17F;
+    font-family: 'Roboto';
 }
 
 .header-subtitle{
     font-family: 'Raleway', sans-serif;
     font-size: 30px;
+}
+
+.btnmenu, .moblogo, .closeblock{
+	display: none;
 }
